syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "Ism.Streaming.V1.Protos";

package webRtcStreamer;

service WebRtcStreamer{
        rpc HandleMessage (HandleMessageRequest) returns (google.protobuf.Empty);
        rpc InitSession (InitSessionRequest) returns (InitSessionResponse);
        rpc DeInitSession (DeInitSessionRequest) returns (google.protobuf.Empty);
        rpc GetSourceStreams (google.protobuf.Empty) returns (GetSourceStreamsResponse);
}

message DeInitSessionRequest{
    string sessionId = 1;
}

message GetSourceStreamsResponse{
    repeated WebRtcSourceMessage sources = 1;
}

message WebRtcSourceMessage{
    string streamName = 1;
    WebRtcStreamTypeEnum streamType = 2;
    int32 previewIndex = 3;
}

message SendCommandReqtest{
    string identifier = 1;
    string type = 2;
    string value = 3;
}

message HandleMessageRequest{
    string sessionId = 1;
    WebRtcInfoMessage offer = 2;
}

message InitSessionRequest{
    string sessionId = 1;
    string streamId = 2;
    WebRtcInfoMessage offer = 3;
    AccessInfoMessage accessInfo = 4;
}

message InitSessionResponse{
    repeated WebRtcInfoMessage answer = 1;
}

message WebRtcInfoMessage{
    string aor = 1;
    string type = 2;
    string message  = 3;
    bool bypassMaxStreamRestrictions=4;
}

message AccessInfoMessage {
	string id = 1;
	string ip = 2;
	string userName = 3; 
	string applicationName = 4; 
	string machineName = 5;
	string details = 6;
}

enum WebRtcStreamTypeEnum{
    WEB_RTC_STREAM_TYPE_UNKNOWN = 0;
    WEB_RTC_STREAM_TYPE_STREAMING = 1;
    WEB_RTC_STREAM_TYPE_PREVIEW = 2;
}